# kf-dcmotor-simulator

./: .clangd  .gitignore  CMakeLists.txt  README.md
docs/: dcmotor_model.md  development.md  graphics_context.md  kalman_filter.md  ui_ux.md
src/: main.cpp
src/core/: CMakeLists.txt
src/core/config/: Configuration.cpp  Configuration.hpp
src/core/math/: Matrix.cpp  Matrix.hpp
src/core/models/: DCMotorModel.cpp  DCMotorModel.hpp  KalmanFilter.cpp  KalmanFilter.hpp
src/core/simulation/: SimulationEngine.cpp  SimulationEngine.hpp
src/core/utils/: NoiseGenerator.cpp  NoiseGenerator.hpp  TimeUtils.cpp  TimeUtils.hpp
src/ui/: CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.hpp  UIRenderer.cpp  UIRenderer.hpp
src/ui/themes/: PastelTheme.cpp  PastelTheme.hpp  ThemeManager.cpp  ThemeManager.hpp
